[fix]Fixing navigation on mobile.

--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -63,7 +63,11 @@
   * {
     @apply border-border;
   }
-  body {
+  body, html {
+    height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden; 
     @apply bg-background text-foreground;
   }
 }
